--- a/01_流水/2024-05-12.md
+++ b/01_流水/2024-05-12.md
@@ -41,3 +41,23 @@
 ```
 
 ## 币
+```
+echo '{ "command": ["set_property","pause",true] }' | socat - /tmp/mpv-socket
+
+
+暂停
+echo '{ "command": ["set_property","pause",false] }' | socat - /tmp/mpv-socket
+
+
+
+播放速度
+echo '{ "command": ["set_property","speed","1"] }' | socat - /tmp/mpv-socket
+
+
+快进
+echo '{ "command": ["seek",10] }' | socat - /tmp/mpv-socket
+
+input-ipc-server
+/tmp/mpv-socket
+
+```
