--- a/cb/交易系统/行为金融.md
+++ b/cb/交易系统/行为金融.md
@@ -1,6 +1,7 @@
-	
-蒙捷被认为是将行为金融学应用到投资界的权威之一，著有多本经典书籍。其中，《Behavioural Investing: A Practitioner’s Guide to Applying Behavioural Finance.》（Montier 2007）被认为是一本集大成之作。该书的前半部分系统的总结了投资者经常出现的各种错误以及造成这些错误的认知偏差，后半部分重点讨论了这些行为错误会在市场中造成什么现象、以及人们应该怎么做。
 
+## 读一些BOOK
+
+蒙捷被认为是将行为金融学应用到投资界的权威之一，著有多本经典书籍。其中，《Behavioural Investing: A Practitioner’s Guide to Applying Behavioural Finance.》（Montier 2007）被认为是一本集大成之作。该书的前半部分系统的总结了投资者经常出现的各种错误以及造成这些错误的认知偏差，后半部分重点讨论了这些行为错误会在市场中造成什么现象、以及人们应该怎么做。
 
 
 它的另一本更加普及的读本《The Little Book of Behavioral Investing: How not to be your own worst enemy.》（Montier 2010）。
@@ -17,6 +18,32 @@ X -> C
 > C 理性判断没有危险, 意识到的时候, X 已经让你产生了行动
 > 从生存的角度: 一个假阳性(false positive)好过一个伪阴性(false negative), 所以情感战胜的理智
 > 
+
+
+
+经济学诺奖得主 Richard Thaler 的《“错误”的行为》。尤其是书中的第六部分，介绍了金融市场的一些常见的“市场异相”及其行为金融学的理论解释。作者很会讲故事，行文简单易懂，非常推荐。
+
+
+经济学诺奖得主 Robert Shiller 的《非理性繁荣》。
+> 宏观金融市场，尤其是房地产领域感兴趣的
+
+公司金融等微观层面的相关内容感兴趣，其实可以看看芒格的《穷查理宝典》。
+
+London Business School 的金融学教授 Alex Edmans，有一系列行为金融学的免费线上课程，在他的个人主页就能找到。
+
+
+思维与发现
+道德情操论
+魔鬼经济学
+思考快与慢
+
+
+
+
+---
+
+
+## 一些情绪心理
 
 ### 情绪温差
 
@@ -213,180 +240,24 @@ X -> C
 赌场就是一个好的重视过程的例子。在赌场里的游戏中，赌场的胜率都会稍微高于 50%。这样长期下来，赌场一定是会赚走玩家的钱的，因此赌场根本不在乎眼前一两局的得失。由于有一个好的过程（超过 50% 的胜率的游戏设计），赌场一定会实现好的结果。
 
 
-## 人性
-
 ### 前景理论 (prospect theory)
 
-面对浮盈处于风险厌恶害怕失去  , 过早处置, 拒绝不确定性, 
-面对浮亏处于风险追求希望回来, 不愿意处理, 继续面对不确定性
+> [!NOTE]
+> 
+> 面对浮盈处于风险厌恶害怕失去  , 过早处置, 拒绝不确定性, 
+> 面对浮亏处于风险追求希望回来, 不愿意处理, 继续面对不确定性
 
-转 100 快的快乐远远小于输 100 的痛苦
 
-反人性
-浮盈: 克服人性, 主动提高风险偏好程度, 放大持仓周期 (合理的? ) (赌徒?)
+又体现在: 赚 100 快的快乐远远小于输 100 的痛苦
+
+应该**反人性**? 
+**浮盈** : 克服人性, 主动提高风险偏好程度, 放大持仓周期 (合理的? ) (赌徒?)
 拒绝盯盘, 拒绝噪音, 克服利润回吐
 
-
-
-浮亏: 
-
-
-舒适区: 
+**浮亏** : 
 
 一个人如果没有耐心持有盈利的自律, 为什么会认为自己有耐心等待行情波动, 请进行择时的自律? 
 
 
-钟摆效应
-泡沫, 
-认知缺陷, 怕错过, 
-动量策略的存在
-
-中心点: 中枢结构, 横盘区间
-
-波动效应
-钟摆的中点总变化
-公允价值的变化, 
-
-震荡-趋势
-
-震荡: 大周期
-趋势: 小周期
-
-模型和市场
-
-模型: 输出对市场的预期 (价格, ), 市场是错的, (左侧交易, )
-市场: 市场正确, 右侧交易 (追随市场趋势的交易)
-
-交易体系: 
-
-
-
-RSI:  判断反转
-MACD: 金叉: 趋势突破
-夏普比例: 超额风险下的超额收益
-
-入场: 
-入场位置: 
-盈亏比: 
-设置合理的止盈止损
-越低的位置: 止损要短, 止盈要大
-越高的位置: 止损要大, 止盈要短
-
-1. 区分相对高点和低点
-	1. 周期不同, 所对应的过去的走势来判断
-2. 什么是合理的止损和止盈 
-	1. 潜在期望
-3. 为什么要合理性
-
-### 利润的来源 : 
-**离场** :  止盈止损的设置问题, 
-更大周期的止盈, 更小周期的止损, 更小的超额亏损, 换取更大的超额收益
-位置的变化, 只导致合理性区域内的止损止盈的数额, 不影响期望, 更不影响超额风险和超额收益的变化
-
-被扫了? 
-
-短线, 高频 (次数多, 交易费用高)
-**择时**: (过于盈亏比)
-择时大概就是在投研能力领先全市场99%的参与者的情况下就能做到了，因为市场本质是博弈性的，是由人的行为构造的，而非随机的。
-现象: 更少的风险-> 更多的收益
-反复尝试, 更小的周期维度去分析
-反复止损, 
-
-胜率和盈亏比的乘积--期望
-
-
-**后验**: 顺势, 事件 a 发生, 导致事件 b 概率变化 (贝叶斯公式)
-整体趋势是多头, 小行情上涨, 后续上涨概率高
-
-**中前期**:更大的止损, 更大的止盈 (轻仓) 否则只有亏损
-
-轻仓顺势
-
-**终极目标**:更小的止损, 更大的止盈, 截断亏损?, 让利润奔腾
-
-月线看趋势, 周线定买点, 日线定止损? 
-```
-一分钟进场，策略也很简单，就道氏一二三，然后设置很小的止损，进场之后开始逐k分析，浮赢之后挂移动止损，到目标位止盈一半，剩下的移动止损，一天能开六七单，不断去试仓，遇到行情好的时候能吃这段行情的百分之七八十，长期下来盈亏比胜率都很高，盈亏比这东西，只要计划止损位够小，随便都有一比二，其实更重要的是头寸和心态管理。
-
-道氏123就是抓趋势反转的机会，比如当一段多头趋势的趋势线被打破，价格反弹没有破前极值的高点，同时反弹伴随着缩量，量能背离，位置接近大级别压力位附近等等当这些条件同时或大部分满足，就是一个做空的机会，止损一般放比前高高点的位置，防止被止损猎杀。当然这是基本的条件，后续还要观察单根k线的动能，关注k线组合及形态，形态也会随着k线的演变而演变，这时候要及时调整自己的策略。
-
-逐k分析，我主要观察量，单根k线的动能，组合k线，k线所在的位置，以及k线走出的形态。
-
-主做ETH和BTC
-
-
-重仓大手数小止损，就吃一根k线的收益就足够，但是寻找合适机会的时间太长，并且多数平台点差很大，加上手续费，关键在于一分钟，五分钟级别的超短线已经不是人操盘为主了，而是程序量化，这就导致走势完全随机，不具备趋势性，并且随着资金体量变大，必然要寻求更长的操作级别时间
-
-
-```
-
-```
-选定一个周期的高低运动，用合适自己的方式，处理这个周期以下的上下波动。照着这个方向，用钱去练，练几年，就会有自己的东西了。我不认为交易是能教出来的。练是有可能成功的。
-```
-
-
-```
-提升赢亏概率，提高赢亏比，提升资金使用率。我现在要解决 **资金使用率** 问题
-```
-
-提升资金使用率 : 加杠杆
-
-
-### 确定性, 正确
- 行情的确定性: 一个交易者要知道接下来**一段时间内所有** 参与市场的交易者的买卖动作
- 盈利的确定性: 大样本下期望为正
-行情确定性不存在
-
-任意的策略信号, 都会出现反向的可能性
-
-不要把筹码押注在一次交易上
-交易者能力的核心是仓位管理, 不是预测行情
-应对行情(轻预测, 重应对)-> 仓位管理
-
-仓位管理: 
-凯利公式, 半凯利公式, 波动率回归
-合理的仓位管理才是核心。即便真的状态好判断正确了，仓位过轻一样是潜在损失。
-判断错误, 影响不大
-
-交易系统的可否性: 
-行情出现了什么状态, 策略是错误的 (时间, 价格, 指标)
-解释一切的策略, 过拟合
-
-交易的持续性: 能否活下去继续交易
-只要存在归 0 的可能, 绝不操作, 只要归 0, 则下场
-
-### 风控 (高优先级)
-期望是动态的, 期望在短期并不是一成不变的
-新的样本应该**具有更大的权重** 
-
-正期望, 归 0, 大资金有规模优势, 市场这个庄家  (仓位过重)
-极端行情 : 轻仓能在黑天鹅活下来
-
-### 插针
-机构: 减轻上涨的压力
-流动性: 流动性低, 容易出现
-1. 优化周期: 放小周期, 短期突破趋势, 放大周期 (止损放大)
-2. 优化认知, 可能会出现的形态
-3. 优化工具, 期权不怕插针
-4. 优化策略,  
-![](Pasted%20image%2020240516144219.png)
-
-
 ---
 
-
-经济学诺奖得主Richard Thaler的《“错误”的行为》。尤其是书中的第六部分，介绍了金融市场的一些常见的“市场异相”及其行为金融学的理论解释。作者很会讲故事，行文简单易懂，非常推荐。
-
-
-经济学诺奖得主Robert Shiller的《非理性繁荣》。
-> 宏观金融市场，尤其是房地产领域感兴趣的
-
-公司金融等微观层面的相关内容感兴趣，其实可以看看芒格的《穷查理宝典》。
-
-London Business School的金融学教授Alex Edmans，有一系列行为金融学的免费线上课程，在他的个人主页就能找到。
-
-
-思维与发现
-道德情操论
-魔鬼经济学
-思考快与慢
