--- a/00_inbox/插件.md
+++ b/00_inbox/插件.md
@@ -4,6 +4,7 @@ Mermaid Tools: 画图辅助
 Prettier Format: 自动格式化
 [dataviewjs](dataviewjs.md)
 
+[templater](templater.md)
 
 [charts](charts.md): https://github.com/phibr0/obsidian-charts
 
