--- a/啊啊/三观.md
+++ b/啊啊/三观.md
@@ -1,9 +1,10 @@
 
 
 # 人生观
+
 # 世界观
 
-冯友兰的中国哲学简史要是不够还可以看冯友兰的中国哲学史
+冯友兰的[中国哲学简史](中国哲学简史.md)要是不够还可以看冯友兰的[中国哲学史](中国哲学史.md)
 见识, 沉淀? 
 
 多尝试?  
@@ -22,9 +23,6 @@
 
 做事, 成事 , 多做事, 做好
 内耗 ,
-
-
-
 
 
 自己 ,了解自己 , 适合自己
@@ -78,7 +76,7 @@
 怎么挣钱, 踏踏实实 | 快钱
 怎么花钱, 刀刃上| 享乐, 出行酒店, 
 
-金钱心理学
+[金钱心理学](金钱心理学.md)
 过去的经验指导当下的问题: 
 未来和现在一样 xxxx
 
@@ -134,5 +132,3 @@ Plan B, 跨界, 换脑子, 多维度竞争力
 财富->  
 什么最重要: 体验, 享乐| 责任(自己, 亲人)
 自己的女儿和她一样?
-
-
