--- a/啊啊/想过的生活.md
+++ b/啊啊/想过的生活.md
@@ -35,9 +35,23 @@ title: "[[想过的生活]]"
 认同
 真挚的朋友
 
-![](Pasted%20image%2020241016000058.png)
+| 学习成长        | 体验突破    | 休闲娱乐     |
+| ----------- | ------- | -------- |
+| 阅读?         | 游泳?     | 游戏<br>看剧 |
+| 工作事业        |         | 家庭生活     |
+| 跳槽? <br>尝试? |         | 旅游?      |
+| 身体健康        | 财务理财    | 人际社群     |
+| 体检?<br>变壮?  | 扩大赚钱能力? | 朋友生日?    |
 
-![](Pasted%20image%2020241016000917.png)
+
+
+|     | 热情  | 痛苦  | 时机  | 总分  |
+| --- | --- | --- | --- | --- |
+| 锻炼  | 4   | 8   | 8   | 20  |
+| 学英语 | 4   | 4   | 10  | 18  |
+| 读书  | 10  | 10  | 10  | 30  |
+
+
 ![](Pasted%20image%2020241016001653.png)
 
 具体
