--- a/perions/租房.md
+++ b/perions/租房.md
@@ -1,12 +1,12 @@
 ---
-
 tags:
-  - cb
+  - 租房
 创建时间: 2024-10-21 13:27:50
 三观: Sad
 title: "[[租房]]"
 ---
 
 考虑的地铁站: 
-
-
+* 近地铁
+* 不是特别偏
+* 性价比可以  4000
