--- a/啊啊/钱.md
+++ b/啊啊/钱.md
@@ -94,7 +94,7 @@ eg: 产品很火, 铺天盖地的广告
 惧怕风险对你的人生来说本身就是一种很大的风险 : 试试
 风险: 2年为期, 40w,  -> 20w , 没有运气, 成功不了 有上限  时间有上限  出售时间
 安稳: 保底收入, 风险低 ?
-控制权交给别人, 认为自己是**受害者思维**
+控制权交给别人, 认为自己是[受害者思维](名字.md#受害者思维)
 要自由, 和控制权, -> 有不安全感
 收益: 未知?  骑驴找马 ? 运气? 
 
@@ -117,3 +117,7 @@ tiktok 零成本 小成本
 
 年轻人需要先在社会中有一席之地，需要有独立的经济基础。而这个目的，就需要你充分的利用时间，不能随意的挥霍，不能随时调转船头。看清楚，这就是广大普通的青少年应该有的社会观。可以不急功近利，可以不阿谀奉承，可以不委曲求全，但必须能独立生存。如果你像UP这样的人，有了物质基础，当然可以纵享世界的美好，可是正是她口中有“目的性”的父母，通过把时间用在出结果上，才能让UP有了后面的生活。 我年轻的时候也感觉，广袤世界无限梦想，可是我的身体在时光中会机能下降，我的父母在时光中会衰老消亡。无奈的是，我人格高尚，热爱广泛，都不能让食物和药物免费。我热爱生命，却需要为维持生命而工作，消耗生命。我自己能吃能睡，可是父母需要我的照顾，这照顾也需要物质保障。我永远也无法只奴役别人的时光，所以我自己也得积极用自己的时光，为自己生命的质量换得基础。 而亲爱的年轻人，我鼓励你们享受生命，但更希望，你们先有一席之地可以生存。尤其是没有家庭基础的人，好好利用自己的时间，在某一领域获得适当能力与成就，当你们能安居乐业的时候，也可以给子女提供像UP一样的生活选择，可以选择继续兴趣，可以选择稍后搁置，可以放弃，也可以拥有。
 一件事，只有你做出来成果，它会给你正反馈，你才能感受到快乐。
+
+
+
+
