--- a/00_inbox/插件.md
+++ b/00_inbox/插件.md
@@ -7,6 +7,7 @@ Prettier Format: 自动格式化
 [templater](templater.md)
 
 # Multi-Column Markdown
+various-complements: 自动补全工具
 
 
 [charts](charts.md): https://github.com/phibr0/obsidian-charts
