--- a/啊啊/执行力, 行动力.md
+++ b/啊啊/执行力, 行动力.md
@@ -5,4 +5,18 @@ tags:
 三观: Happy
 title: "[[执行力, 行动力]]"
 ---
+无意识失控 ?
+意识到正在无意识
 
+正念
+端正自己的念头, 不评判
+
+**觉察能力**
+
+**观察者视角**
+
+1. 立刻行动: 不要思考, 手快过脑
+2. 及时满足感, 完成感
+	1. 努力控制你能控制的事, 接纳你不能控制的事
+3. 完成比完美重要 最差目标
+4. 借助外力 微小的变量
