--- a/啊啊/正反馈.md
+++ b/啊啊/正反馈.md
@@ -8,3 +8,14 @@ title: "[[正反馈]]"
 ---
 成就感? 完成感? 仪式感? 进不感
 
+不要浪费年轻时拥有的时间和精力, 
+如果有意识, 有效的把时间花在兴趣爱好上, 花在朋友和家里, 或者去创业, 那应该没啥好后悔的
+不记得看过的电视
+
+* 你可以做你想做的任何事, 但不是所有事
+* 优先级排序, 对有些事情说不
+* 调整系统, 而不是捶打自己
+* 生活以外的目标
+* 个人目
+每天最好能有1~2小时能做一些生活进步的事, 而不是维持生活
+
