--- a/啊啊/规划/具体的.md
+++ b/啊啊/规划/具体的.md
@@ -19,21 +19,37 @@ title: "[[具体的]]"
 > 理财的计划
 > 额外的赚钱计划, 扩大赚钱能力
 ## 身体健康
-- [ ] 
-体检:   一年? 几次? 几号? 
-健身:  周几次? 多长? 多数? 
-俯卧撑:
-骑车:
-哑铃:
-深蹲:
-仰卧起坐:
 
+体检:   一年? 几次? 几号? 
+**健身**:  周几次? 多长? 多数? 
+
+每周2个小时:  17/7  24/5 , 40/3
+组合1 : 仰卧起坐, 骑车, 俯卧撑or哑铃
+组合2 : 仰卧起坐, 深蹲, 俯卧撑or哑铃
+
+执行细节: 
+
+|            | 反馈  | 优先级 | 7      | 5      | 3      |     |
+| ---------- | --- | --- | ------ | ------ | ------ | --- |
+| 仰卧起坐(腹肌)   |     | 高   | 20/140 | 30/150 | 50/150 |     |
+| 俯卧撑(手臂, 胸) |     | 中   | 20/140 | 30/150 | 50/150 |     |
+| 哑铃(手臂, 胸 ) |     | 低   | 20/140 | 30/150 | 50/150 |     |
+| 骑车(心肺, 下肢) |     | 高   | 20min  | 30min  | 30min  |     |
+| 深蹲(核心, 下肢) |     | 高   | 20/140 | 30/150 | 50/150 |     |
+
+短期目标: 3个月? 衡量? 
+俯卧撑: 50 一次性? 
+仰卧起坐: 50一次性? 
+深蹲: 50一次性?
+骑车: 30min/ 9 一次性? 
+哑铃: 弯举: 20一次性? 
+
+长期相关性 ✅
 
 ## 人际
-
-几个? 几次? 
-
-线上? 
+长期相关性? 有啥用? 合哪个目标? 
+5次 2个
+线上?   
 附近? 
 微信? 
 
@@ -42,8 +58,12 @@ title: "[[具体的]]"
 活动? 
 参加生日? 
 加入某个团体(虚拟团体? 工会? )??
-
+朋友生日? 
 ## 休闲娱乐
+长期相关性? 未知身体(精神平衡)
+每周? 2x5 14x2
+
+一部分可以结合健身同时(骑车)
 
 电视? 几部? 
 游戏几个? 什么成就? 
@@ -51,27 +71,55 @@ title: "[[具体的]]"
 
 ## 工作? 
 什么时候准备? 
+现在? 
 什么程度开始面试? 
-咋样算结束? 满意的offer?  投入多少? 
+准备2周后? 累计8小时后?
 
-软考? 要不要?
+咋样算结束? 满意的offer? 
+或者面试次数达到100次算短期结束? 
+一周2次面试? 少?  100次一年.......
+软考? 要?
 
 ## 赚钱? ?????
-发展副业??  兼职? 
-被动收入多少?
+
+收入(被动最好)多少, 1000/月? 
+副业??  
+技术副业?  同时远离技术人(卷)
+自媒体?   -> (前期: 输出)
+电商之类的?  -> ()
+小产品? (发现需求, 小而美, 一次性收入)
+咨询 
+
+
+兼职? ? 干啥去? 
+一般工: 好找, 工资低, 大概率无其他价值
+特殊工: 有体检? 有其他价值?  不好找
+自己创建: ? 
 如何实现? 
 
+其他? 
+股票? 币? 
+
 ## 看书? 
-看什么书? 几本 ? 
-收获怎么输出? 输出在哪? 
+看什么书? /book中的选, 或者加入
+1个月 1本  ?
+收获怎么输出?  写记录和读后感
+输出在哪?  obsidian中
 
 
-| 学习成长        | 体验突破    | 休闲娱乐     |
+## 愿望清单, 体验突破? 
+不枉此生, 
+每月/ 每周
+买: 促进智能化
+
+
+
+| ~~学习成~~长        | 体验突破    | 休闲娱乐     |
 | ----------- | ------- | -------- |
 | 阅读?         | 游泳?     | 游戏<br>看剧 |
 | 工作事业        |         | 家庭生活     |
 | 跳槽? <br>尝试? |         | 旅游?      |
-| 身体健康        | 财务理财    | 人际社群     |
+| ~~身体健康~~    | 财务理财    | ~~人际社群~~ |
 | 体检?<br>变壮?  | 扩大赚钱能力? | 朋友生日?    |
 
 |     | 热情  | 痛苦  | 时机  | 总分  |     |
@@ -81,5 +129,8 @@ title: "[[具体的]]"
 | 读书  | 10  | 10  | 10  | 30  |     |
 
 ![[Pasted image 20241016001653.png]]
+
+
+
 
 
