--- a/啊啊/名词/三观.md
+++ b/啊啊/名词/三观.md
@@ -88,11 +88,24 @@ flowchart LR
 每个人不一样, 
 
 资源,  识人
-目标
+**目标**
+
+
+消费和娱乐带来的快乐是短暂的
+1. 改变不了你的阶级
+2. 消除不了你的焦虑
+3. 解决不了你的困惑
+
+1. 做期望值为正的事情(大数定律, 遍历所有结果)
+2. 自己给自己[[正反馈]]
+
+
 行动
 处理问题: 抗压, 调整, 
 
 代价
+
+
 
 ## 矫情   
 本质 -> 无风险的 -> 升级关系
@@ -184,8 +197,9 @@ Plan B, 跨界, 换脑子, 多维度竞争力
 
 # 人生观
 > 二者的碰撞, 想做什么什么事, 即使失败也不后悔
+> 自由意志的重点不是自由, 而是意志
 
-
+有目标但不敢去做, 最后就失去了自由
 
 追求, 目标
 想要什么样的人生: 稳定, 知足常乐,一眼忘到头 | 折腾, 富贵险中求
@@ -193,3 +207,10 @@ Plan B, 跨界, 换脑子, 多维度竞争力
 财富->  
 什么最重要: 体验, 享乐| 责任(自己, 亲人)
 自己的女儿和她一样?
+
+在主流中: 痛苦焦虑, 但稳定安全
+脱离主流: 自由, 无尽的风险
+
+思考只能带来性价比, 唯有意志才能带来自由
+
+心上修，破心中之贼。舍中得，破欲望之贼。事上练，破犹豫之贼。j
