--- a/啊啊/名词/时间管理.md
+++ b/啊啊/名词/时间管理.md
@@ -19,6 +19,18 @@ title: "[[时间管理]]"
 
 * 维持生命不得不做的事
 	* 打扫,洗衣,  做饭, 
+
+1. 执行层
+2. 名利
+3. 精神 
+4. 意义 
+
+主动管理娱乐时间
+
+把时间用在你最终不会引以为豪的东西上面是一件可怕的事情, 浪费了你在地球上的短暂旅程
+
+ 
+
 ## 技能
 
 目标 -> 大致的方向
