--- a/啊啊/名词/正反馈.md
+++ b/啊啊/名词/正反馈.md
@@ -6,7 +6,32 @@ tags:
 title: "[[正反馈]]"
 ---
 > [!danger] 没有持续的正反馈!!
+> 
 > 不可能有持续的正反馈, 完美的自律, 一蹴而就, 不允许失败
+
+本质是一种评价权:(社会: 成绩, 财富,权力) 
+自己给自己正反馈, 就是和社会争夺评价权
+1. 证明社会没资格评价你(eg: 评价体系有问题)
+觉得自己与社会格格不入, -> 痛苦, 不正常 
+
+我们千万不要误把精神健康定义成预防精神病症状
+症状并非我们的敌人, 相反是我们的朋友, 症状存在之处, 意味着存在冲突,
+冲突的存在, 则意味着生命的力量仍在为其完整和幸福做抗争
+反倒是在那些最正常的人群中,隐藏着真正无药可治的精神疾病患者, 许多人看上去正常, 这是因为
+他们已经习惯了目前的生存模式, 在生命的早期, 他们就已失声, 放弃抵抗, 不愿受苦也不可能像那些精神过敏者一样发展出精神病症状
+
+重返美丽新世界
+
+
+
+现实世界的大多数人, 对平庸顶礼膜拜对任何事儿都没自己独特的见解, 他们对自己提出一个最低标准, 便觉得自己没什么可苛责的了, 实际上他们知识浑浑噩噩的过着得过且过的二流角色
+而一小撮以社会上流名义自居的人, 大多数人实际上没有任何能力, 不过是在一个"高贵人士的小圈子" 中相互吹捧, 这个社会太过包容, 因此也有他们的容身之处, 与此同时, 社会中还存在真正的精英, 他们对在乎的事情, 都有独立的见解, 不断对自己提出更高的要求, 进而赋予某种使命, 这无关财富, 天赋和成绩, 他们不在乎结果如何, 只是将不断超越自我, 视为一种责任和义务, 对他们来说除非能够致力于一项超越的事业, 否则生活断无意义可言, 在现实生活中, 我们很少能遇到几个能够自发而欢愉地做出努力的人, 在芸芸众生中, 他们犹如鹤立鸡群, 卓尔不凡, 这些少数人精英, 唯有他们的生活才是奋发有为的, 而不是消极被动的, 这些精英身上肩负着, 为社会选择方向, 并推动社会发展的艰巨使命
+
+大众的反叛
+
+3. 证明你有自我评价的能力, 可以正确的行使评价权
+
+
 
 1 -(51%*10)
 
