--- a/啊啊/名词/自律.md
+++ b/啊啊/名词/自律.md
@@ -8,5 +8,25 @@ title: "[[自律]]"
 ---
 > 在当下利益与未来利益发生冲突时, 坚定的选择未来的利益
 
+
+如果没有外界认可, 一味的自我鼓励, 短期内可能让你更加自律, 但是时间一长你就会开始自我怀疑, 不确定那到底是自我鼓励还是自我安慰, 最终会变成异常精神内耗
+
+难也要做
+自己定义快乐, 不断获得自己定义的快乐, 最终按照自己的意愿度过一生
+
 理智脑聪明但弱小，情绪脑强壮但不太灵光，所以用理智脑引导情绪脑狼狈为奸是最为理智而高效的选择
 
+```mermaid
+flowchart TD
+痛苦 -- 2 --> 目标无法获得持续的正反馈 & 过度放纵的羞愧 -- 3 --> 自律 -- 1 -->痛苦
+
+
+不可能三角
+平庸 --- 空闲 --- 成就 --- 平庸
+```
+
+A --- B
+
+
+
+想永远是无边美好但是虚无的 做就不一样了 你不一定会成功但一定会有一个答案
