--- a/啊啊/名词/工作.md
+++ b/啊啊/名词/工作.md
@@ -3,7 +3,7 @@ tags:
   - cb
 创建时间: 2024-11-10 22:49:08
 三观: Happy
-title: "[[工作与上班]]"
+title: "[[工作]]"
 ---
 
 ## 什么是工作 
@@ -11,7 +11,7 @@ title: "[[工作与上班]]"
 
 ## 为什么要工作
 1. 维持生存(活着, 生命的基本诉求)
-## 工作的利与弊
+## 工作
 
 **利**:
 风险一定?  
@@ -26,7 +26,7 @@ title: "[[工作与上班]]"
 5. 现在非越老越吃香,年纪越大风险越大? 
 
 
-## 不工作的利与弊
+## 不工作
 
 **利**
 赚钱的能力(得摸爬滚打)?
