--- a/啊啊/名词/正反馈.md
+++ b/啊啊/名词/正反馈.md
@@ -10,7 +10,6 @@ title: "[[正反馈]]"
 > 不可能有持续的正反馈, 完美的自律, 一蹴而就, 不允许失败
 
 
-
 和[[满足感]], 沉浸感的关系? 
 成就感? 完成感? 仪式感? 进步感
 
@@ -79,7 +78,7 @@ end
 可是，我们活着不是为了受苦啊。我的人生，并不是一条古井无波的直线，而是一条上下起伏的曲线，我会有低落的时候，也会有亢奋的时候，而在不同状态下，我的"舒适圈"范围，也是不同的。当我设定一件事情的难度时，设定在舒适圈的上限附近就足够了，真正重要的是在每个"今天"都能完成。长期的积累后，以前觉得困难的事情也会逐渐变得轻松。
 为什么要跳出**舒适圈**呢？反而，我要一直待在舒适圈内，让舒适圈和我一同上行。
 
-知行合一
+[[执行力, 行动力#知行合一|知行合一]]
 
 
 大数定律
