--- a/啊啊/杂.md
+++ b/啊啊/杂.md
@@ -69,3 +69,13 @@
 合理化: 为自己的某种情绪, 动机或者行为辩解
 理智化: 
 
+# 第一性原理
+无法证伪, 归 0, 解构, 重构
+思考方式
+经验: 归纳法, 未来和过去一样可以证伪, 求存不求真
+推理: 演绎法,  保真?  逻辑正确? 
+系统之外的大前提
+每个系统, 都存在基本的命题或假设, 不能违背或者删除
+跨学科学习
+根本问题? 
+比较思维, 系统之内
