--- a/规划/具体的计划.md
+++ b/规划/具体的计划.md
@@ -3,7 +3,7 @@ tags:
   - cb
 创建时间: 2024-11-10 23:23:50
 三观: Happy
-title: "[[具体的]]"
+title: "[[具体的计划]]"
 ---
 
 > [!tip] 
@@ -134,3 +134,118 @@ title: "[[具体的]]"
 
 
 
+```mermaid
+gantt
+
+	title 年度计划
+
+	%% 起止日期语法格式
+   	dateFormat  YYYY-MM-DD
+   	%% 最下方时间轴日期格式
+	axisFormat %m月
+	%% 最下方时间轴时间间隔
+	tickInterval 1month
+	%% 表示今天标记的显示样式
+	todayMarker stroke-width:3px,stroke:#FBBC05,opacity:0.6
+
+	%% 定义任务分类/区
+	section 完整体检一次
+	开始: active, a0, 2024-01-01, 1M
+	
+	section 阅读36本书
+	开会讨论项目工作计划: done, a1, after a0, 2024-01-05
+	执行工作包 1: done, a2, after a1, 6M
+	汇报及讨论工作包 1 成果: done, a3, after a2, 5d
+
+    section 把游泳学会
+    执行工作包 2: active, a4, after a3, 5M
+	汇报及讨论工作包 2 成果: active, a5, after a4, 5d
+    
+    section 里程碑
+	M1 - 完成工作包 1: milestone, after a2, 0d
+	M2 - 完成工作包 2: milestone, after a4, 0d
+	M3 - 提交项目报告: crit, milestone, 2024-01-20, 0d
+	
+	section 项目结束
+	项目结束: active, 2024-12-30, 1d
+```
+
+
+```mermaid
+%%{init: {"quadrantChart": {"chartWidth": 400, "chartHeight": 400}, "themeVariables": {"quadrant1TextFill": "#ff0000"} }}%%
+	quadrantChart
+		title 事情的紧急和重要性
+		  x-axis "紧急" --> "不紧急"
+		  y-axis "不重要" --> "重要 ❤"
+		  quadrant-1 "计划"
+		  quadrant-2 "做"
+		  quadrant-3 "委托"
+		  quadrant-4 "删除"
+		Campaign A: [0.3, 0.6]
+		Campaign B: [0.45, 0.23]
+		Campaign C: [0.57, 0.69]
+		Campaign D: [0.78, 0.34]
+		Campaign E: [0.40, 0.34]
+		Campaign F: [0.35, 0.78]
+
+```
+
+
+
+
+[做计划](https://www.bilibili.com/video/BV1ra4y1m7H8/?vd_source=351ae22481963e1732be800e8bc59c8a)
+
+困难 -> 具体| 简单
+一天中效率最好的时间
+工作日志
+番茄钟
+珍惜时间
+
+
+## 学习成长, [[一定要做的事|提升自己]]?
+[[拖延心理学]]
+[[认知觉醒]]
+
+## 体验突破
+[[一定要做的事#改变周围的环境 旅游之类的, 体验|体验list]]
+## 休闲娱乐
+## 家庭生活
+## 身体健康
+定期[[体检]]
+[[一定要做的事#视觉上的变化 打扮,穿搭, 每隔一段视觉, 有点微小的变化|身体list]]
+
+## 财务管理
+## 人际社群 
+认同
+真挚的朋友
+附近? 
+
+## 工作事业
+[[正在做的事]]
+根源上不满意的点:         发展停滞, 钱不变, 能力不变,  自我创造, 自我肯定,自我满足, 别人认可
+
+想做的事业: 
+**喜欢的事**: 想知道他的一切
+1. 好像暂时没有........
+2. 
+
+
+**擅长的事**: 无意识就能做好的事, 天赋, 和才能, 先天的?  
+重视别人的感受? 观察别人?
+
+
+**平时自然而然就在做的事**: 或者感到充实, 开心
+不由自主思考现象背后的事情
+洞察,分析, 系统化思考
+
+
+
+**对别人感到烦躁**: 为什么这么简单的事都做不到
+
+**有价值的事**:
+1. 给别人提供价值, 并且得到认可和反馈(社会的[[正反馈]]?)
+
+
+
+
+体验演唱会
