--- a/规划/赚钱.md
+++ b/规划/赚钱.md
@@ -20,7 +20,8 @@ title: "[[赚钱]]"
 > 可以不急功近利，可以不阿谀奉承，可以不委曲求全，但必须能**独立生存**。
 
 
-> 和规划结合在一起, 和正反馈结合在一起
+> 和[[规划]]结合在一起, 和[[正反馈]]结合在一起
+
 
 
 ## 大致的赚钱方式
@@ -116,4 +117,8 @@ tiktok 零成本 小成本
 互联网, 爆款? 
 
 金钱和放纵式的快乐
-努力获得自我认可的快乐
+努力获得[[满足感|自我认可]]的快乐
+
+
+
+各种稀奇古怪的技能都能变现了，也许你的爱好也是有经济价值的。
