--- a/book/斯坦福人生设计课.md
+++ b/book/斯坦福人生设计课.md
@@ -7,7 +7,6 @@ title: "[[斯坦福人生设计课]]"
 ---
 
 
-
 > [斯坦福人生设计课分享](https://www.bilibili.com/video/BV1qt411A7Nc/?vd_source=351ae22481963e1732be800e8bc59c8a)
 	人生没有最优解 
 
@@ -19,11 +18,10 @@ title: "[[斯坦福人生设计课]]"
 * 寻求帮助
 **什么时候最快乐, 最有能量, 一生值了**
 
-1梳理过去：清楚自我定位，发现自己仍未解决的问题。这些问题正是未来努力的方向。 
-
-2.明确未来的目标。想清楚未来3-5年内有挑战性并且可行的目标。 
-3.完成目标，提升自己完成目标的能力。 
-4.详细的描述完成目标后的好处。
+1. 梳理过去：清楚自我定位，发现自己仍未解决的问题。这些问题正是未来努力的方向。 
+2. 明确未来的目标。想清楚未来3-5年内有挑战性并且可行的目标。 
+3. 完成目标，提升自己完成目标的能力。 
+4. 详细的描述完成目标后的好处。
 
 ## 愿望清单
 不枉此生, 
@@ -32,9 +30,9 @@ title: "[[斯坦福人生设计课]]"
 
 ## 怎么做计划
 打开思维 3 个并行五年计划
-1. 正在做的事情五年
-2. 一定要做的事情 五年
-3. 你想过的生活 五年
+1. [[正在做的事]]五年
+2. [[一定要做的事]] 五年
+3. [[想过的生活]] 五年
 
 40 有车有房, 有老婆, 有孩子, 责任?  
 喜欢啥: 
