--- a/book/奇特的一生.md
+++ b/book/奇特的一生.md
@@ -1,10 +1,12 @@
 ---
-
 tags:
-  - cb
+  - 时间管理
 创建时间: 2024-11-17 20:59:59
 三观: Happy
 title: "[[奇特的一生]]"
+author: 俄罗斯-达尼伊尔·格拉宁
+篇幅: 4小时左右
+分: 3
 ---
 
 
