--- a/啊啊/名词/三观.md
+++ b/啊啊/名词/三观.md
@@ -61,6 +61,14 @@ flowchart LR
 
 当你看到所有信息都在支持你做出同一个结论时, 并不说明那个结论毋庸置疑, 而是因为我们视角受到了局限, 或者我们见识太浅
 
+* 诚信
+* 自由
+* 关爱
+* 重承诺
+
+
+价值观会引导你的人生目标方向。
+
 
 多尝试?  
 目的: 适合自己的
