--- a/规划/想过的生活.md
+++ b/规划/想过的生活.md
@@ -9,8 +9,13 @@ title: "[[想过的生活]]"
 > 基于价值观, 兴趣爱好, 人生目标等因素而在内心构建的理想的生活状态, 主观的
 > 涉及居住环境, 工作内容, 人际关系, 家庭关系, 休闲方式, 兴趣爱好等
 
+和人生目标, 未来的关系? 
+
+理论上会带来[[满足感]]?
 
 ### 居住环境
+**300W**
+
 有小院子?  生活遍历, 周边有一定的生活气息, 可以养小动物(猫, 狗)
 有庭院: 可以晒太阳, 聚餐, 集体活动
 有书房: 各种好书, 历史精华
@@ -25,10 +30,25 @@ title: "[[想过的生活]]"
 有个草坪, 种苹果树
 
 
-### 家庭生活
+### 家庭生活人生目标
+幸福的, 无话不说的, 快乐的, 身体健康的, 稳定的, 知足的, 温暖的, 和睦的
 每周最少2天在一起, 一起分享, 陪伴, 关心, 一起做活动 (出去玩, 旅游, 做饭...)
 
+### 个人成长人生目标
+
+包括知识获取、技能提升、性格塑造等。如一个人想要精通多种语言，或者培养坚韧不拔的意志品质。
+
+### 社会贡献人生目标
+力所能及吧, 目前没有大愿望
+~~像致力于环境保护，减少碳排放；或者投身慈善事业，帮助贫困地区的人们改善生活条件等。~~
+
+
+### 职业人生目标
+没有? 不希望上班, 不想上班
+
 ### 人际关系
+**200w**
+拥有一群真挚的朋友，在彼此的陪伴下度过充实的一生。
 能有一定解决问题的能力 
 生病, 升学, 各种问题
 有固定的小团体:   一起行动, 或者分享
@@ -39,18 +59,19 @@ title: "[[想过的生活]]"
 
 ### 兴趣爱好
 
+如何发现自己的兴趣爱好? 
 
 兴趣是生活的调味剂，如果你喜欢绘画，那么可以设想自己有一个专门的绘画工作室，每天都能抽出一定的时间来进行创作，并且能够参加一些绘画展览或者和其他画家交流的活动。
 设想自己周围的朋友和社交圈子。你可能希望有一群志同道合的朋友，经常一起聚会、分享生活经验和兴趣爱好。
 
 ### 工作? 
 不工作, 或者不为别人工作
+一名成功的企业家，创立具有全球影响力的公司。?
+一名顶尖的外科医生，拯救无数患者的生命? 
+
 人生目标。这可能包括职业目标、个人成长目标等。如果你的职业目标是成为一名资深的软件工程师，那么你可以设想自己在一家知名的科技公司工作，参与重要的项目开发，不断学习新的技术，并且获得相应的职业成就和经济回报。
-    - **工作状态**：小林计划成为自由撰稿人后，每天早上可以在自己的书房里开始工作，根据自己的兴趣和客户需求撰写各种文案，比如旅游攻略、美食评论或者文化散文。她可以自由安排工作时间，有时为了赶稿可能会忙碌几天，但也可以在完成任务后给自己放一个小假。她会和不同的杂志、网站等媒体合作，通过网络和客户沟通，这样她就有更多的时间呆在家里享受生活。
 
-
-
-
+小林计划成为自由撰稿人后，每天早上可以在自己的书房里开始工作，根据自己的兴趣和客户需求撰写各种文案，比如旅游攻略、美食评论或者文化散文。她可以自由安排工作时间，有时为了赶稿可能会忙碌几天，但也可以在完成任务后给自己放一个小假。她会和不同的杂志、网站等媒体合作，通过网络和客户沟通，这样她就有更多的时间呆在家里享受生活。
 
 ### 休闲娱乐
 自己在闲暇时间会做什么
@@ -62,16 +83,30 @@ title: "[[想过的生活]]"
 * 健身? 
 * 长途旅行, 探索不同的文化和风景
 
+## 我的人生目标
 
-对未来的期盼: 
-想象力欠缺......
-财务自由,  150w?
-时间自由? 
-睡觉? 看剧?  打游戏? 找人陪? 
+1. **什么是人生目标**
 
-![[Pasted image 20241202222054.png]]
+内心深处期望在一生中达成的、具有深远意义的方向或成就。它是一种宏观的愿景，涵盖了生活的多个方面，如职业、个人成长、社会贡献等。
+可以是长期的 -> 可以分解为中期和短期目标相配合
+
+2. **如何找到自己的人生目标**
+
+- **自我反思**
+    - **回顾过往经历**：回顾自己的成长历程，寻找那些让自己感到兴奋、满足或者有成就感的时刻。
+    - 例如，如果你在学校组织的志愿者活动中帮助贫困儿童时，内心充满喜悦和满足感，这可能暗示你对社会公益事业有潜在的兴趣，社会贡献可能是你人生目标的一部分。
+    - **分析兴趣爱好**：仔细思考自己的兴趣所在。兴趣是发现人生目标的重要线索。如果你热爱绘画，那么在艺术领域追求职业发展或者通过绘画为他人带来美的享受可能是你的目标。例如，梵高对绘画的热爱驱使他不断创作，尽管生前未得到广泛认可，但他的画作如今为无数人带来美的震撼，绘画成为他人生目标的核心体现。
+    - **挖掘价值观**：价值观会引导你的人生目标方向。如果公平正义是你最看重的价值观，那么你可能会选择从事法律相关工作，为维护公平正义而奋斗，这就可能成为你的人生目标。
+- **探索外部世界**
+    - **接触不同领域**：尝试参加各种不同类型的活动、讲座、培训等。
+    - 例如，你可以参加科技研讨会、艺术展览、户外运动俱乐部活动等。
+    - 通过这些接触，你可能会发现新的兴趣点或者受到启发，从而确定自己的人生目标。
+    - 比如，你原本对计算机编程没有概念，但在参加一次科技创业分享会后，对软件开发产生了浓厚的兴趣，这可能开启你在科技领域设定人生目标的旅程。
+    - **与他人交流**：和不同的人交谈，包括家人、朋友、导师、行业前辈等。
+    - 他们可能会从不同的角度给你提供建议或者分享他们自己的人生经验，帮助你发现自己的目标。
+    - 比如，和一位资深的旅行家交流后，你可能会被激发起对世界探索的欲望，进而将环球旅行或者成为旅行博主作为自己的人生目标之一。
+- **尝试与实验**
+    - **小步实践**：一旦有了一些潜在的目标想法，就可以进行小规模的尝试。例如，如果你对写作有兴趣，想把成为一名作家作为人生目标，可以先在业余时间开始写一些短文、博客，看看自己是否享受这个过程并且有持续的动力。
+    - **接受反馈并调整**：在尝试的过程中，收集他人的反馈。比如，你把自己写的文章给朋友或者专业人士看，听取他们的意见。根据反馈来判断自己是否适合这个目标方向，如果不适合，就及时调整，寻找更符合自己的目标。
 
 
-发展内在秩序
-恢复内在秩序
-[[满足感]]
