--- a/法律/基本.md
+++ b/法律/基本.md
@@ -72,6 +72,98 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 
 结合对账单, 
 
+## 大致流程
+
+| 时间节点aaaaaaa              | 核心行动                                                                                     | 税务杠杆植入                                                                                     |                                                        |
+| ------------------------ | ---------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------ | ------------------------------------------------------ |
+| **8月4日**                 | 向HR送达《社保/公积金补缴告知函》                                                                       | 注明：  <br>_“未依法缴纳社保导致本人个税多缴，贵司需承担赔偿责任”_                                                     |                                                        |
+| **8月15日**                | 向社保局提交投诉（附2023-2025年工资流水）                                                                | 同步向税务局寄送《税收违法线索告知书》：  <br>_“企业涉嫌虚增工资成本少缴企业所得税”_                                            |                                                        |
+| **8月25日**                | 向公司抄送社保投诉回执                                                                              | 追加书面提示：  <br>_“如触发税务稽查，滞纳金按日万分之五累计”_                                                       |                                                        |
+| **9月5日**                 | 向税务局提交**三项实名举报**：                                                                        | 1. **虚列工资成本**（证据：社保缴费基数≠实发工资）  <br>2. **接受虚开发票**（若存在第三方代缴）  <br>3. **未代扣代缴个税**（将社保补偿款计入税基） |                                                        |
+| **9月15日**                | 向公司送达《税务稽查风险告知函》                                                                         | 测算违法成本：  <br>*“按稽查追缴标准：企业所得税补缴+滞纳金+0.5-3倍罚款≈月均人力成本×12”*                                    |                                                        |
+| **9月25日**                | 向甲方发送《供应商税务合规风险提示》                                                                       | 注明：  <br>_“如合作方涉税违法，贵司可能承担连带责任（《税收征管法实施细则》第49条）”_                                          |                                                        |
+| **10月5日**                | 申请税务机关出具《补税测算意见》                                                                         | 向公司展示：  <br>*“仅2025年1-9月需补企业所得税≈(13,335×9)×25%=30,003元”*                                   |                                                        |
+| **10月15日**               | 向劳动仲裁委提交 **“社保+个税”捆绑诉求**                                                                 | 申请裁决：  <br>1. 补缴社保  <br>2. 赔偿多缴个税损失（含利息）                                                   |                                                        |
+| **10月25日**               | 向税务局申请 **退税预登记**                                                                         | 向公司出示：  <br>_“本人可退个税金额≥8,000元（由贵司过错导致）”_                                                   |                                                        |
+| **11月27日**  <br>（到期前35日） | 发送《订立无固定期限劳动合同要求书》  <br>（EMS+邮件+工作群@HR负责人）                                               | 《劳动合同法》第14条  <br>（二次续订须签无固定合同）                                                             | 公司若拒绝，到期终止需赔**2N=171,450元**（9个月工资）                     |
+| **12月2日**                | 若未回应，向工会/职工代表大会发函  <br>（揭露公司违法用工行为）                                                      | 《劳动合同法》第43条  <br>（解雇需通知工会）                                                                 | 动员集体监督力量                                               |
+| **12月10日**               | 预约劳动仲裁委窗口  <br>（填写仲裁申请书待提交，拍照发HR）                                                        | 《劳动争议调解仲裁法》第28条                                                                            | 心理战：展示"不和解就开战"决心                                       |
+| **12月15日**               | 向甲方客户寄送《违规用工风险告知函》  <br>（说明"假外包真派遣"事实+法律责任）                                              | 附证据：  <br>- 甲方系统账号  <br>- 甲方考核记录  <br>- 甲方门禁权限                                             | 甲方法务必向外包公司施压                                           |
+| **12月18日**               | 向税务局举报甲方接受虚开发票嫌疑  <br>（外包费用与真实用工不符）                                                      | 《发票管理办法》第22条                                                                               | 双重施压：外包公司面临丢失客户风险                                      |
+| **12月22日**               | 提出《解除合同补偿方案》  <br>（清单含）：  <br>- 社保/公积金补缴  <br>- 加班费差额+赔偿金  <br>- 2N经济补偿金  <br>- 未休年假3倍工资 | 注明："3日内签约可放弃25%经济补偿金"                                                                      | **总包≥25万元**  <br>（示例：9个月工资17.1万+加班费3.5万+社保补差4万+年假0.4万） |
+| **12月28日**               | 若未达成一致，提交劳动仲裁申请  <br>（同步将申请书抄送甲方）                                                        | 增加案由：  <br>- 同工同酬差额  <br>- 精神损害赔偿（若存在侮辱性管理）                                                | 推动公司最后一刻妥协                                             |
+
+
+- **12月5日**：向公司展示《税务检查通知书》（若举报属实，税务局30日内启动稽查）
+- **12月10日**：向甲方法务部寄送函件：
+    > _“贵司2025年向外包公司支付费用中，涉嫌接受虚开发票金额累计≥120万元（证据详见附件）”_
+    
+- **12月20日**：提出 **“税收豁免”补偿方案**：
+    > *“支付补偿金24万元（含社保/个税赔偿），其中8万元以**离职补贴**名义发放（免个税），否则将配合稽查提供全套证据”*
+
+
+附 **《工资成本-社保成本比对表》**（示例）：
+
+| 月份     | 实发工资   | 社保申报基数 | **成本虚增额**  |
+| ------ | ------ | ------ | ---------- |
+| 2025.5 | 19,050 | 5,715  | **13,335** |
+|        |        |        |            |
+
+- 社保成本缺失 → 工资成本虚高 → 《企业所得税法》第8条（虚列支出需纳税调增）
+多缴个税索赔 → 《民法典》第1165条（过错责任）
+- 退税依据：《税收征管法》第51条（3年内可退多缴税款）
+- 索赔依据：最高人民法院指导案例183号（企业过错致个税多缴应赔偿） 
+
+
+|补偿项目|传统处置方案|**税务优化方案**|节税效果|
+|---|---|---|---|
+|社保补差|公对公补缴|折算现金补偿（需书面豁免）|企业省滞纳金|
+|加班费差额|按工资薪金计税|纳入**解除合同补偿金**（3倍免税额内）|员工省个税|
+|2N赔偿金|超3倍基数部分征税|拆分支付：  <br>- 3倍内（免税）  <br>- 超3倍部分延至次年1月|递延纳税|
+
+
+| 项目         | 金额          | 税务优化后税负  |                                      |
+| ---------- | ----------- | -------- | ------------------------------------ |
+| 法定补偿金（9个月） | 171,450     | **0元**   | ← 未超社平工资3倍（2540×36=91,440×3=274,320） |
+| 加班费差额      | 15,765      | 0元       | ← 纳入补偿包免税                            |
+| 社保个税赔偿     | 42,000      | 0元       | ← 以“赔偿款”名义支付（非应税所得）                  |
+| **总到手**    | **229,215** | **全额免税** |                                      |
+
+
+1. **举报合法性**
+    - 所有举报基于**真实证据**（避免诬告）
+    - 通过 **12366纳税服务热线** 实名举报（受《税收违法行为检举管理办法》保护）
+        
+2. **税务稽查反制**
+    - 预先准备《无关联个人责任声明》：
+        > _“本人工资收入已如实申报个税，企业违法操作未经本人授意”_
+        
+3. **刑事风险切割**
+    - 在举报材料中注明：
+        > _“虚开发票行为系企业单方操作，本人未参与且已多次反对（证据见202X年X月邮件）”_
+        
+**能否追偿多缴个税？**  
+→ **能**。路径有二：
+- **向税务机关退税**（3年内）；
+- **向企业索赔**（需仲裁/诉讼）
+
+1. **如何最大化维权？**  
+    → **劳动监察投诉+税务退税+民事索赔三轨并行**，以行政处罚决定书强化索赔效力。
+> 实务建议：优先启动**劳动监察程序**，利用行政机关的强制力固定企业违法事实，后续退税与索赔将事半功倍。如企业态度强硬，可同步咨询税务律师设计索赔方案。
+
+
+2. **优先固定证据**
+    - 劳动合同、工资流水（证明收入与社保缺失）；
+    - 企业书面拒缴社保记录（邮件、聊天截图）。
+3. **分步主张权利**
+    - **Step 1**：向劳动监察部门投诉企业未缴社保，要求**责令补缴**（依据《社会保险法》第86条）；
+    - **Step 2**：凭补缴决定书/仲裁裁决，向税务机关**申请退还多缴个税+利息**；
+    - **Step 3**：若企业拒绝赔偿个税损失，提起劳动仲裁主张**损害赔偿**（计算方式：多缴个税额+利息）。
+
+
+12月18日向税务局匿名提交《税收违法线索》，但暂不正式举报，保留为谈判核弹。
+
+
 ## 五险一金
 
 主合同第十六条、补充协议第三十一条、个人信息同意书第三条。
@@ -103,8 +195,6 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 [[社会保险法#^a82970|《社会保险法》第63条]]（用人单位未足额缴费，社保机构有权责令补缴。）
 - [[社会保险征缴暂行条例#^1c657c|《社会保险费征缴暂行条例》第13条]]：社保机构有权追缴欠费。
 
-
-
 ### 公积金
 
 违反[[公积金条例#^bda57e|《住房公积金管理条例》第16条]]规定的按实际工资缴纳原则。
@@ -122,8 +212,6 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 不过从实务角度，建议用户先走劳动仲裁确认劳动关系和工资标准，这个裁决书会成为后续行政执法的尚方宝剑。
 1. 当劳动者与用人单位之间对是否存在劳动关系存在争议时，需要通过劳动仲裁来确认。常见情况包括未签订书面劳动合同、劳动合同到期后未续签但继续工作、以及用其他合同形式代替劳动合同等情形。
 2. 当双方对工资标准存在分歧时，需要通过劳动仲裁来确定。常见情况包括劳动合同约定的工资标准与实际支付不符、工资结构不明确、工资支付记录缺失等。
-
-
 
 第一层是合同变更的合法性，即使用户签了新合同，只要公司未明确告知降薪或社保变更，就属于欺诈；
 第二层是工资构成的法律定义，无论名目如何，固定发放的津贴补贴都计入社保基数；
