--- a/法律/基本.md
+++ b/法律/基本.md
@@ -70,7 +70,6 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 　　对方身份可确认(如微信实名认证)。
 
 
-结合对账单, 
 
 ## 大致流程
 
@@ -165,6 +164,8 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 
 
 ## 五险一金
+
+未按规定缴纳社会保险, 劳动保障, 税务机关
 
 主合同第十六条、补充协议第三十一条、个人信息同意书第三条。
 2023年旧合同第十六条只提了社保，而2025年新合同特意新增了公积金条款，这种变化可能和北京2024年严查公积金缴纳的政策有关。
@@ -290,8 +291,28 @@ D --> F[核查个税与社保基数差异]
 
 ## 加班费
 
+国务院关于职工工作时间的规定: 职工每日工作8小时, 每周工作40小时
+劳动者每周工作超过5天, 用人单位不安排补休的, 才能被认定为休息日加班
+
+平日延时加班(实行标准工时制度)
+
 **加班费未足额支付属于典型的“拖欠工资”范畴**，且构成违法克扣劳动报酬。以下是法律依据和具体分析：
 
+计算 : 
+
+
+所在地区对加班工资这一权利主张所适用的仲裁时效, 主张加班工资的最晚期限
+
+证明自己存在加班的情况, 
+1. 安排加班的证据 
+2. 批准的加班记录
+3. 工作时长, 打卡, 工作邮件, 有效证明真的在加班
+4. 通过线索, 要求公司披露
+
+
+劳动监察举报 
+仲裁委
+人民法院
 
 
 **对〈工资支付暂行规定〉有关问题的补充规定》第三条**：
@@ -325,7 +346,10 @@ D --> F[核查个税与社保基数差异]
 
 
 [[劳动法#^19bd2c|《劳动法》第44条]]法定的200%标准。
+工作日延时加班1.5
+休息日 2
 
+基数: 税前计算
 
 #### 补发差额的法律责任
 
@@ -413,6 +437,12 @@ D --> F[核查个税与社保基数差异]
 - 《职工带薪年休假条例》第5条：未休年假需按 **日工资300%** 支付报酬（含正常工资）。
 -  时机? **离职结算时**
 
+年假转结
+职工带薪年休假条例: 9: 用人单位跟进生产, 工作的具体情况, 并考虑职工本人意愿, 统筹安排年休假, 用人单位确因工作需要不能安排职工年休假或者跨一个年度安排年休假的, 应征得职工本人同意
+
+擅自规定年休假失效时间违法依据? 
+
+
 ### 合同到期
 公司不续签
 **公司降低续签条件**：若公司以“降低原合同待遇”（如降薪、调岗至更低职位）为条件提出续签，劳动者拒绝后续签，公司仍需支付补偿金
@@ -439,6 +469,17 @@ D --> F[核查个税与社保基数差异]
     
     > “用人单位违反本法规定不与劳动者订立无固定期限劳动合同的，**自应当订立之日起向劳动者每月支付二倍的工资**。”
     > 
+
+未签合同, 可能2倍
+北京地区明确规定, 如果原单位需要终止劳动合同, 有提前30天通知劳动者的法律义务, 
+
+##  竞业
+约定条款
+限制期给补偿
+支付违约金
+履行了限制, 可以主张赔账 (nx0.3)
+
+
 
 
 
