--- a/工具性内容/老家.md
+++ b/工具性内容/老家.md
@@ -6,6 +6,19 @@ dv.taskList(dv.current().file.tasks.where(t => !t.completed))
 
 
 
+---
+沥水篮子
+新篮子
+新簸萁
+电量统计
+电池
+葱之类的调料
+窗户防风
+水碱怎么弄
+不沾挂钩
+内存
+水垢
+
 # 衣
 
 
