--- a/法律/基本.md
+++ b/法律/基本.md
@@ -15,7 +15,7 @@ https://github.com/Melody1024/labour_law/blob/master/README.md
 [国家法律法规数据库](https://flk.npc.gov.cn/)
 
 外包模式中A公司是唯一责任主体，所有诉求应针对A公司。但B公司作为实际用工方，对工作条件、安全等也有连带责任。可双管齐下施压。
-但B公司作为实际用工方需承担连带责任（《劳务派遣暂行规定》第10条）。维权时可将A、B公司列为共同被申请人，增加谈判筹码。
+但B公司作为实际用工方需承担连带责任（《劳务派遣暂行规定》第10条）。维权时可将A、B公司列为共同被申请人，增加谈判筹
 历年工资流水、社保缴费记录、劳动合同变更文件、离项通知等。对于外包员工，可同时追究A公司（用人单位）和B公司（用工单位）的连带责任，依据是[[劳动合同法#^efeeb0|《劳动合同法》第92条]]。
 
 
@@ -176,7 +176,7 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 [[社会保险法#^5eb9bc|《社会保险法》第六十条]]和[[公积金条例#^ed81e5|《住房公积金管理条例》第20条]]都要求足额缴纳。
 **未足额缴纳**，员工可要求补缴差额并主张赔偿（[[劳动合同法#^5790cf|《劳动合同法》第38条]]、[[劳动合同法#^337286|46条]]）。
 
-- 《关于工资总额组成的规定》第4条：津贴补贴属于工资。
+- 《关于工资总额组成的规定》第4条：津贴补贴属于工资j。
 - 北京社保中心《缴费基数申报规则》：月均工资=税前应发工资（含固定津贴）。
 
 
@@ -194,6 +194,7 @@ persionA在 2021年10月18日入职 公司A  总月薪 15000 合同期为3年
 - [[公积金条例#^ed81e5|《住房公积金管理条例》第20条]]：公积金必须足额缴纳。
 
 - 住建部《关于进一步落实住房公积金降成本政策的通知》（建金〔2018〕45号）：要求重点稽查低缴存基数企业。
+
 
 
 同时向社保、公积金、税务、劳动监察多部门举报，利用部门间的数据共享和考核压力让公司无处可逃。
