--- a/book/健康/超越百岁.md
+++ b/book/健康/超越百岁.md
@@ -17,8 +17,44 @@ title: "[[超越百岁]]"
 
 
 
+
 ```dataviewjs
 dv.taskList(dv.current().file.tasks.where(t => t.text.includes("")))
 ```
 
 [[]]
+
+> 预防大于治疗
+
+
+四个重要问题
+癌症
+糖尿病
+心血管病
+阿茨海默症 
+
+控制, 改善手段
+
+
+* 运动
+* 睡觉
+* 吃
+	* 蛋白质
+	* 脂肪 -> 胆固醇
+		* 高密度脂蛋白
+		* 底密度脂蛋白
+		* 饱和脂肪酸(SFA)(更多氢原子)
+		* 单不饱和脂肪酸(MUFA)
+			* 橄榄油, 红花油
+			* 棕榈油和椰子油
+		* 多不饱和脂肪酸(PUFA)
+			* omega-3 (大脑和心血管)
+				* 海洋EPA,DHA
+					* 鲑鱼等
+				* 非海洋ALA
+					* 坚果,亚麻籽等
+			* omega-6 
+	* 碳水
+* 定期检查
+* 补剂
+* 代谢平衡
