--- a/book/健康/超越百岁.md
+++ b/book/健康/超越百岁.md
@@ -8,6 +8,7 @@ title: "[[超越百岁]]"
 [[]]
 彼得 阿提亚
 
+Outlive
 
 
 
@@ -24,17 +25,100 @@ dv.taskList(dv.current().file.tasks.where(t => t.text.includes("")))
 
 [[]]
 
-> 预防大于治疗
+> 预防大于治疗, 维持健康寿命, 在更健康的状态下活的更久
 
 
-四个重要问题
+实际寿命: 活多久
+健康寿命, 有质量的寿命: 活多好
+边缘十年
+
+保持和改善我们的身心功能
+
+主流医学要等到诊断结果出来以后再进行干预, 延缓死亡
+在疾病根深蒂固以后, 而非在开始扎根之前进行治疗
+推迟了你的死亡实际, 却没有显著提高你的生活质量
+微不足道的风险因素,随着时间的推移, 逐渐演变成了一场势不可挡的灾难
+
+
+
+基因
+APOE -> 载脂蛋白 -> 参与胆固醇的运输和加工
+e2 -> 保护不痴呆
+e3
+e4 -> 患病风险增加2~12倍
+对阿尔茨海默有已知影响
+
+FOXO3: 缺乏营养,运动时会更活跃
+
+衰退
+认知能力下降 -> 身体技能的下降 -> 情绪健康
+
+四类慢性病
+
+专注延缓疾病的发作, 而不是延长疾病的持续时间
+
+恢复力: 
+
+二甲双胍
+雷帕霉素: 西罗莫司(免疫调节剂)
+减缓细胞生长和分裂的过程
+mTOR: 细胞层面上最重要的长寿介质之一, 高度"保守性" 几乎存在于所有生命形式中 ---> 表明进化认为他非常重要
+任务: 平衡生物生长和繁殖需求与营养物质的可用性
+当食物充足: 细胞或者生物体进入生长模式
+匮乏: 细胞进入回收利用模式, 节约能量, 不进行细胞分裂
+
+风险: 免疫抑制风险
+
+AMPK: 促使细胞节约能量, 并寻求替代的能量来源, 抑制mTOR的活性
+
+自噬
+
+窗口限制
+热量限制(Caloric Restriction)
+类型限制? 
+
+感染, 创伤, 虚弱 
+
+肝脏: 身体真正的主力
+
+
+
+前体: 非酒精性脂肪性肝病(NAFLD)
+胆固醇过高相关
+非酒精性脂肪性肝炎(NASH)
+最初的症状一般只会在肝酶丙氨酸转氨酶(alanineaminotransferase, ALT)的血液测试中显示出来。ALT水平升高通常是肝脏出问题的第一条线索
+男性的上限为30，女性为19
+
+
 癌症
-糖尿病
-心血管病
-阿茨海默症 
+## 糖尿病(相关的代谢功能障碍)
+糖化血蛋白(HbA1c) : 平均血糖水平100mg/dL 5.1%  糖尿病
+动态血糖检测(CGM)
+
+心血管病(心脏病)
+阿茨海默症(神经退行性疾病) 
 
 控制, 改善手段
 
+
+
+战术和战略
+
+### 运动
+> 保持体力, 耐力, 稳定性同时原理疼痛和残疾
+
+
+力量
+稳定性
+有氧效率
+峰值有氧能力
+
+
+### 营养
+
+睡眠
+情绪健康
+外源性分子 (药物, 补剂)
 
 * 运动
 * 睡觉
