--- a/book/健康/超越百岁.md
+++ b/book/健康/超越百岁.md
@@ -80,6 +80,21 @@ AMPK: 促使细胞节约能量, 并寻求替代的能量来源, 抑制mTOR的活
 感染, 创伤, 虚弱 
 
 肝脏: 身体真正的主力
+1. 糖原转化成葡萄糖 -> 维持血糖稳定
+2. 身体大约20%（大量）的胆固醇供应来自肝脏，肝脏扮演着胆固醇储存库的角色，将其运送到需要它的细胞中，并通过血液循环将其接收回来。
+对于一个典型的久坐不动的人来说，由于他没有迅速消耗肌糖原，甜甜圈产生的多余能量大部分最终会进入到脂肪细胞中（或者更具体地说，它们会转化为甘油三酯，储存在脂肪细胞中）​。
+
+- [ ]  热量卡路里 -> 皮下脂肪-> 内脏脂肪 (DEXA检查, 代谢科, 内分泌科)
+
+增加炎症因子
+
+血液 -> 甘油三酯
+肝脏 -> NAFLD 
+肌肉 -> 胰岛素抵抗 
+心脏  -> 
+胰腺  -> 
+
+![[Pasted image 20251011130145.png]]
 
 
 
@@ -91,20 +106,148 @@ AMPK: 促使细胞节约能量, 并寻求替代的能量来源, 抑制mTOR的活
 最初的症状一般只会在肝酶丙氨酸转氨酶(alanineaminotransferase, ALT)的血液测试中显示出来。ALT水平升高通常是肝脏出问题的第一条线索
 男性的上限为30，女性为19
 
+高胰岛素血证 -> 前驱糖尿病 -> NAFLD/NASH -> 2型糖尿病 
+
+“瘦”的人安全储存脂肪的能力可能要低得多。在其他条件相同的情况下，身体带有一点脂肪的人也可能会有更大的脂肪储存能力，因此比那些看起来更瘦的人有更多的代谢余地。
+
+
 
 癌症
 ## 糖尿病(相关的代谢功能障碍)
 糖化血蛋白(HbA1c) : 平均血糖水平100mg/dL 5.1%  糖尿病
 动态血糖检测(CGM)
 
-心血管病(心脏病)
+### 心血管病(心脏病)
+> 动脉粥样硬化性心血管病ASCVD
+
+心脏CT扫描: 检测冠状动脉是否存在钙化, 是晚期硬化标志
+36岁,应该是0
+
+心率变异性(HRV): 梵音心脏自主神经系统调节能力以及心血管系统健康状态
+低不好
+
+更喜欢使用CT血管造影，而不是普通的钙扫描[插图]，因为CT血管造影还可以识别钙化之前的非钙化或“软”斑块
+
+
+血液在细胞之间运输胆固醇分子
+低密度脂蛋白或“坏”胆固醇，与高密度脂蛋白或“好”胆固醇
+
+低密度脂蛋白颗粒中的胆固醇含量，也就是你体内的“坏”胆固醇值（技术上表示为LDL C）
+LDL-C测试值为110～120mg/dL
+
+各种治疗指南规定了LDL-C的目标范围，一般正常风险患者为100mg/dL，高风险个体为70mg/dL。在我看来，这个标准仍然太高了。简而言之，我认为如果治疗没有副作用的话，你不能过多地降低apoB和LDL-C，只能希望尽可能的低一些。
+
+```
+低密度载脂蛋白胆固醇100mg/dL大约是2.59
+mmol/L,70mg/dL大约是1.81mmol/L。(协和
+的参考范围是:低危人群应<3.4中高危人群应<2.6
+极高危人群应<1.8超高危人群应<1.4)
+
+```
+
+apoB比简单的LDL-C（标准的“坏胆固醇”指标）更能预测心血管疾病。
+
+要尽可能降低apoB水平，而且是尽早干预为好
+
+
+钙化积分 -> Lp(a): 是导致心脏病的最普遍的遗传性风险因素
+
+因为Lp(a)水平的升高在很大程度上是遗传性的，所以检测只需要做一次（而且心血管疾病指南也开始建议，无论如何一生都要进行一次检测）​。
+
+```
+ 钙化积分
+ 
+ 
+ 当一种普通的低密度脂蛋白颗粒与另一种更为罕见的蛋白质——载脂蛋白(a)，简称apo(a)（不要与载脂蛋白A或apoA混淆，载脂蛋白A是一种标记高密度脂蛋白颗粒的蛋白质）融合时，这种极度糟糕的脂蛋白就形成了。apo(a)松散地包裹在低密度脂蛋白颗粒周围，带有多个被称为“环饼”(kringles)的环状氨基酸片段，之所以如此命名，是因为它们的结构类似于同名的环状丹麦糕点。正是这些环饼使得Lp(a)如此危险：当低密度脂蛋白颗粒通过血液时，它们会带走一些氧化的脂质分子，并随身携带着它们。
+ 
+
+因为Lp(a)是apoB颗粒家族中的一员，所以它也有可能穿透内皮并卡在动脉壁上。由于其结构特点，Lp(a)可能比正常的低密度脂蛋白颗粒更容易被卡住，其多余的脂质会变质。
+
+```
+
+
+“好胆固醇”值，即HDL-C
+apoB颗粒在你的血液中循环。这个数字比这些颗粒携带的胆固醇总量要重要得多。
+
+迄今为止发现的3个最突出的“长寿基因”与胆固醇运输和加工有关（APOE、CETP和APOC3）​。
+
+
+摄入大量饱和脂肪会增加血液中导致动脉粥样硬化的脂蛋白水平，但我们从食物中实际摄入的大部分胆固醇最终都会被排出体外。我们血液循环中的绝大多数胆固醇实际上是由我们自己的细胞产生的。
+
+内皮增加或减少血流量，这一过程由一氧化氮调节
+高血压则会造成机械损伤，但最终的结果都是引发内皮损伤，这反过来又导致了更多低密度脂蛋白的滞留
+高尿酸经常与高血压和其他代谢功能障碍的病征相伴出现。所有这些都会导致动脉粥样硬化发展所需的另一个必要（但不充分）条件，那就是炎症。尤其是内皮屏障，特别容易受到炎症的损伤。
+
+
+
+胆固醇是睾酮, 孕酮, 雌激素, 皮质醇,胆汁酸, 产生需要的
+脂的一种
+
+```
+它必须以一种被称为“脂蛋白”​（lipoproteins, LDL和HDL的最后一个字母“L”指的就是它）的微小球形颗粒为载体，脂蛋白就像小型货运潜艇一样，将胆固醇运送至身体各处的细胞或器官。顾名思义，这些脂蛋白部分是脂质（内部）​，部分是蛋白质（外部）​。蛋白质本质上是可以让它们在我们的血浆中“旅行”的容器，同时携带不溶于水的脂质“货物”​，包括胆固醇、甘油三酯和磷脂，以及维生素和其他需要分布到我们远处组织的蛋白质。
+
+高密度脂蛋白和低密度脂蛋白，与它们各自所携带的脂肪与蛋白质的比例有关。低密度脂蛋白携带更多的脂质，而高密度脂蛋白携带的蛋白质要多于脂肪，因此密度更大。
+
+造成问题的不是胆固醇本身，而是运送胆固醇的颗粒的性质。每一个脂蛋白颗粒都被一个或多个叫作“载脂蛋白”(apolipoproteins)的大分子包裹着，载脂蛋白为颗粒提供了结构、稳定性和最重要的可溶性。高密度脂蛋白颗粒包裹在一种叫作“载脂蛋白A”(apoA)的分子中，而低密度脂蛋白包裹在“载脂蛋白B”(apoB)中。这种区别可能看起来微不足道，但它揭示了动脉粥样硬化疾病的根本原因：每一种导致动脉粥样硬化的脂蛋白，不仅是低密度脂蛋白，还有其他几种[插图]——都携带这种apoB蛋白质特征。
+
+摄入大量饱和脂肪会增加血液中导致动脉粥样硬化的脂蛋白水平，但我们从食物中实际摄入的大部分胆固醇最终都会被排出体外。我们血液循环中的绝大多数胆固醇实际上是由我们自己的细胞产生的。
+
+低密度脂蛋白颗粒粘在动脉壁上并随后被氧化时，问题就开始了，这意味着它们所含的胆固醇（和磷脂）分子接触了一种被称为活性氧(ROS)的高活性分子，而ROS是造成氧化应激(oxidativestress)的主要原因。正是低密度脂蛋白上脂质的氧化引发了整个动脉粥样硬化级联反应。
+
+巨噬细胞，其名称是“大胃王”的意思，可以吞噬聚集或氧化的低密度脂蛋白，试图将其从动脉壁上清除。但如果它吞噬了过多的胆固醇，就会膨胀成泡沫细胞(foam cell)。​“泡沫细胞”这个术语你可能听说过——之所以这样命名，是因为在显微镜下它看起来像泡沫或肥皂。当足够多的泡沫细胞聚集在一起时，它们就会形成一条“脂纹”(fatty streak)，即在冠状动脉剖检时，你可以用肉眼看到的一条脂肪条纹。脂纹是动脉粥样硬化斑块的前兆
+
+为了控制损伤，动脉壁上的“平滑肌”细胞随后会迁移到这个有毒的废物部位，并分泌一种基质，试图在其周围建立一种屏障，就像疤痕一样。这种基质最终会成为全新动脉斑块上的纤维帽(fibrous cap)。
+
+随着这种不适应的修复或重塑过程的继续，斑块将继续生长。起初，这种扩张是指向动脉外壁的，但随着扩张的继续，它可能会侵入管腔，也就是血液流动的通道——在我们的类比中，堵塞了街道本身的交通。这种管腔变窄，被称为“狭窄”(stenosis)，在血管造影中也可以看到。
+
+在这个过程的某一点上，斑块可能开始钙化。这就是常规钙扫描中（最终）显示出来的结果。钙化只是身体试图修复损伤的另一种方式，通过稳定斑块来保护至关重要的动脉。
+
+如果斑块确实变得不稳定、侵蚀甚至破裂，那你就真的有问题了。受损的斑块最终可能导致血栓的形成，血栓会使血管腔狭窄并最终将其堵塞——或者更糟糕的是血栓脱落，并导致心脏病发作或中风。这就是为什么我们更担心非钙化斑块而不是钙化斑块。
+
+
+
+高密度脂蛋白具有多种其他抗动脉粥样硬化功能，包括帮助维持内皮的完整性，降低炎症，中和或阻止低密度脂蛋白的氧化，就像一种动脉抗氧化剂。
+
+```
+
 阿茨海默症(神经退行性疾病) 
 
 控制, 改善手段
 
 
+代谢综合征
+> 符合其中三个及以上
+1. 高血压(>130/85)  倒立脑充血? 
+2. 高甘油三酯(>150mg/dL)
+	1. 换算公式:mg/dL÷88.5~mmol/L(国内医院检测单位是后者)
+3. 低高密度脂蛋白胆固醇(男性<40mg/Dl, 女性<50mg/dL)
+4. 向心性肥胖 (男性腰围>40英寸, 女性腰围>35英寸)
+	1. 男性腰围>101.6cm,女性腰围>88.9cm
+5. 空腹血糖升高(>110mg/dL)
+
+新陈代谢相关的生物标志物
+尿酸
+同型半胱氨酸:这种氨基酸在高浓度[插图]时与心脏病发作、中风和痴呆的风险增加密切相关。
+慢性炎症
+肝酶ALT 谷丙转氨酶
+甘油三酯以及与高密度脂蛋白胆固醇的比例 (小于2:1, 小于1:1), 过高是导致apoB升高的一个因素
+极低密度脂蛋白VLDL的水平
+胰岛素水平: 口服葡萄糖测试 OGTT
+高胰岛素血证
+曲线是否陡峭, 处于胰岛素抵抗早期阶段的人，其体内的胰岛素会在前30分钟内急剧上升，然后保持在高位，甚至在接下来的1个小时内进一步上升。这种餐后胰岛素飙升是最大的早期警告信号之一，表明一切都不顺利。
+
+不是限制脂肪总量，而是要转向能改善血脂状况的脂肪。
+他汀类药物通常是我们的第一道防线（或攻击线）​，它能够抑制胆固醇的合成，并促使肝脏增加LDLR的表达，从而可以将更多的低密度脂蛋白从血液循环中清除。它们可能还有其他益处，包括明显的抗炎作用，所以虽然我认为他汀类药物不应该像一些人建议的那样溶解在饮用水中，但我确实认为它们对降低许多患者的apoB或低密度脂蛋白浓度非常有帮助。
+
+
+
+
+注意果糖的风险, 导致高血压,脂肪增加
+果糖饮料
 
 战术和战略
+
+高尿酸是一个早期信号, 也与高血压有关, 表明我们需要设法解决患者的代谢健康、饮食，或者两者兼有的问题。
 
 ### 运动
 > 保持体力, 耐力, 稳定性同时原理疼痛和残疾
