--- a/book/健康/超越百岁.md
+++ b/book/健康/超越百岁.md
@@ -272,8 +272,36 @@ PCSK9抑制剂
 ## 阿茨海默症(神经退行性疾病) 
 
 
+代谢问题
+葡萄糖代谢, 炎症, 氧化应激
+
+运动: 维持葡糖糖稳态, 改善血管系统的健康
+耐力运动: 提高线粒体效率, 控制皮质醇水平, 降低炎症和氧化应激
+力量运动
+握力:   50kg
+
+睡眠: 
+睡眠中断, 睡眠不足: 高压力和皮质醇水平升高, 胰岛素抵抗
+损害褪黑素的释放
+
+口腔健康
+
+较高的维生素D水平 -> 记忆力
 β-淀粉样蛋白积聚 
 
+大脑血流量
+
+身体, 心理, 认知
+
+1.对心脏有益的东西对大脑也有益。也就是说，血管健康（意味着低apoB、低炎症和低氧化应激）对大脑健康至关重要。
+2.对肝脏（和胰腺）有益的东西对大脑也有益。代谢健康对大脑健康至关重要。
+3.时间是关键。我们需要尽早考虑预防，遗传因素对你越不利，你就越需要努力，越需要尽早开始。与心血管疾病一样，我们需要参加一场漫长的比赛。
+4.我们预防认知能力下降最有力的工具就是运动。我们已经谈论了很多关于饮食和新陈代谢的问题，但运动似乎可以通过多种方式（血管、代谢）来保护大脑健康。我们将在第三部分中详细介绍，但大量的运动是我们预防阿尔茨海默病计划的基础。
+
+
+
+
+鼻内胰岛素
 基因
 APOE -> 载脂蛋白 -> 参与胆固醇的运输和加工
 e2 -> 保护不痴呆
@@ -353,7 +381,7 @@ FOXO3: 缺乏营养,运动时会更活跃
 			* 橄榄油, 红花油
 			* 棕榈油和椰子油
 		* 多不饱和脂肪酸(PUFA)
-			* omega-3 (大脑和心血管)
+			* omega-3 (大脑健康和心血管)
 				* 海洋EPA,DHA
 					* 鲑鱼等
 				* 非海洋ALA
@@ -363,3 +391,64 @@ FOXO3: 缺乏营养,运动时会更活跃
 * 定期检查
 * 补剂
 * 代谢平衡
+
+## 睡眠 
+## 情绪健康
+
+## 健康检测
+
+
+
+---
+以下是《超越百岁》第三部分（第十至十七章）的核心内容总结，涵盖运动、营养、睡眠、情绪健康及健康监测五大支柱的具体方法与科学依据：
+------
+一、运动：优化有氧效率与力量训练
+1. 二区训练（Zone 2）
+  ◦ 作用：提升线粒体健康与代谢灵活性，增强脂肪利用效率，延缓衰老。每周3-4次，每次45分钟，心率维持在最大心率的70%-85%（如快走、骑行），保持“可说话但无法轻松交谈”的强度。
+  ◦ 科学依据：职业运动员80%训练时间在此区间；代谢疾病患者通过此训练可改善胰岛素敏感性，降低糖尿病风险。
+2. 最大摄氧量（VO₂max）训练
+  ◦ 方法：每周1-2次高强度间歇训练（HIIT），如4分钟高强度（90%最大心率）与3分钟恢复交替循环，持续20分钟。
+  ◦ 长寿关联：VO₂max每提升3.5 ml/kg/min，全因死亡率下降10%-15%；精英水平（＞60 ml/kg/min）者死亡风险最低。
+3. 力量与功能性训练
+  ◦ 方案：每周2-3次力量训练，重点复合动作（深蹲、硬拉、划船），每组8-12次；结合“百岁老人十项全能”目标（如单腿站立30秒、3分钟爬4层楼）。
+  ◦ 数据支持：肌肉量每增加10%，全因死亡率下降10%；下肢力量强者老年跌倒风险降低50%。
+------
+二、营养：个性化代谢管理
+1. 地中海饮食框架
+  ◦ 核心原则：每日≥5种颜色蔬果、全谷物（燕麦/糙米）、深海鱼（每周≥2次）、特级初榨橄榄油；饱和脂肪＜总热量10%，添加糖＜25克/日。
+  ◦ 抗炎机制：多酚类物质抑制NF-κB通路，降低炎症指标（如CRP）30%。
+2. 进食时机与热量控制
+  ◦ 七分饱原则：每餐胃部无压迫感，激活长寿基因SIRT1，减少自由基产生。
+  ◦ 时间限制进食（TRF）：8小时进食窗口（如10:00-18:00），模拟断食效应，改善胰岛素敏感性。
+3. 风险成分严控
+  ◦ 酒精：男性每日＜25克，女性＜15克（约1杯红酒）；无安全剂量，红酒养生为误区。
+------
+三、睡眠：神经修复与疾病防御
+1. 睡眠的生理作用
+  ◦ 时长与质量：每日7.5-8.5小时，深睡眠占比≥20%，清除β-淀粉样蛋白（阿尔茨海默症标志物）。
+  ◦ 认知保护：睡眠不足者痴呆风险增加65%，深睡眠每减少1%，记忆衰退加速0.5%。
+2. 环境与行为优化
+  ◦ 环境调整：室温18-22℃、遮光窗帘、白噪音设备；睡前2小时避免蓝光（电子设备）。
+  ◦ 禁忌：睡前3小时禁食，避免咖啡因/酒精；白天小睡≤30分钟以防睡眠碎片化。
+------
+四、情绪健康：打破负面循环
+1. 辩证行为疗法（DBT）
+  ◦ 正念觉察：每日10-15分钟冥想，降低皮质醇水平，提升端粒酶活性30%。
+  ◦ 认知重构：识别“负面刺激→情绪→行为”链条，用反向行动（如焦虑时主动放松）打破循环。
+2. 社交支持系统
+  ◦ 深度社交：每周≥2次亲友交流或兴趣小组，孤独感使早亡风险增加26%。
+  ◦ 情感账户：定期表达感激，缓冲负面事件冲击；男性抑郁常表现为愤怒/冷漠，需专业干预。
+------
+五、健康监测：个体化风险防控
+1. 关键生物标志物管理
+  ◦ 心血管：LDL-C＜2.6 mmol/L（高危人群＜1.8），血压＜120/80 mmHg（每升高20/10 mmHg，风险翻倍）。
+  ◦ 代谢：空腹血糖＜5.6 mmol/L，糖化血红蛋白（HbA1c）＜5.7%。
+2. 早筛策略与动态调整
+  ◦ 40岁以上：年检颈动脉超声、骨密度；50岁以上：增加胃肠镜筛查。
+  ◦ 家族史应对：直系亲属有早发心脏病者，提前10年启动预防（如40岁服用他汀）。
+------
+总结：医学3.0的核心原则
+• 预防优先：在“死亡四骑士”（心血管病、癌症、糖尿病、神经退行性疾病）潜伏期干预，如通过连续血糖监测（CGM）发现胰岛素抵抗。
+• 个体化定制：无万能方案，需结合基因检测（如ApoB、Lp(a)）、生活习惯动态调整。
+• 健康寿命＞寿命长度：目标是将病痛压缩至生命最后5年，实现“无病衰亡”。
+正如书中所言：“健康不是靠医生给的，而是日常生活中每个选择的积累。” 主动设计而非被动接受，方能在晚年保有尊严与活力。
