--- a/法律/条文/劳动合同法.md
+++ b/法律/条文/劳动合同法.md
@@ -53,7 +53,7 @@ dv.taskList(dv.current().file.tasks.where(t => t.text.includes("")))
 
 第十条　建立劳动关系，应当订立书面劳动合同。
 已建立劳动关系，未同时订立书面劳动合同的，应当自用工之日起一个月内订立书面劳动合同。
-用人单位与劳动者在用工前订立劳动合同的，劳动关系自用工之日起建立。
+用人单位与劳动者在用工前订立劳动合同的，劳动关系自用工之日起建立。 ^f4fc0f
 
 第十一条　用人单位未在用工的同时订立书面劳动合同，与劳动者约定的劳动报酬不明确的，新招用的劳动者的劳动报酬按照集体合同规定的标准执行；没有集体合同或者集体合同未规定的，实行同工同酬。
 
@@ -85,7 +85,7 @@ dv.taskList(dv.current().file.tasks.where(t => t.text.includes("")))
 （七）社会保险；
 （八）劳动保护、劳动条件和职业危害防护；
 （九）法律、法规规定应当纳入劳动合同的其他事项。
-劳动合同除前款规定的必备条款外，用人单位与劳动者可以约定试用期、培训、保守秘密、补充保险和福利待遇等其他事项。
+劳动合同除前款规定的必备条款外，用人单位与劳动者可以约定试用期、培训、保守秘密、补充保险和福利待遇等其他事项。 ^466d54
 
 第十八条　劳动合同对劳动报酬和劳动条件等标准约定不明确，引发争议的，用人单位与劳动者可以重新协商；协商不成的，适用集体合同规定；没有集体合同或者集体合同未规定劳动报酬的，实行同工同酬；没有集体合同或者集体合同未规定劳动条件等标准的，适用国家有关规定。 ^94d620
 
@@ -251,7 +251,7 @@ dv.taskList(dv.current().file.tasks.where(t => t.text.includes("")))
 （四）法律、行政法规规定的其他条件。
 经营劳务派遣业务，应当向劳动行政部门依法申请行政许可；经许可的，依法办理相应的公司登记。未经许可，任何单位和个人不得经营劳务派遣业务。
 
-第五十八条　劳务派遣单位是本法所称用人单位，应当履行用人单位对劳动者的义务。劳务派遣单位与被派遣劳动者订立的劳动合同，除应当载明本法第十七条规定的事项外，还应当载明被派遣劳动者的用工单位以及派遣期限、工作岗位等情况。
+第五十八条　劳务派遣单位是本法所称用人单位，应当履行用人单位对劳动者的义务。劳务派遣单位与被派遣劳动者订立的劳动合同，除应当载明本法[[劳动合同法#^466d54|第十七条]]规定的事项外，还应当载明被派遣劳动者的用工单位以及派遣期限、工作岗位等情况。
 劳务派遣单位应当与被派遣劳动者订立二年以上的固定期限劳动合同，按月支付劳动报酬；被派遣劳动者在无工作期间，劳务派遣单位应当按照所在地人民政府规定的最低工资标准，向其按月支付报酬。
 
 第五十九条　劳务派遣单位派遣劳动者应当与接受以劳务派遣形式用工的单位（以下称用工单位）订立劳务派遣协议。劳务派遣协议应当约定派遣岗位和人员数量、派遣期限、劳动报酬和社会保险费的数额与支付方式以及违反协议的责任。
